--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjs/common": "^10.3.7",
     "@nestjs/core": "^10.3.7",
     "@nestjs/platform-express": "^10.3.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "husky": "^9.0.11",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
