--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "husky": "^9.0.11",
+    "nestjs-pino": "^4.0.0",
     "pg": "^8.11.5",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
